recycling-bin/2026-04-21-repo-cleanup/tmp/stream-bootstrap/objects/sunrun2_bom_lines__dll/sunrun2_bom_lines__dll.object-meta.xml
<CustomObject>
    <label>sunrun2_bom_lines</label>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Other</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>