recycling-bin/2026-04-21-repo-cleanup/tmp/stream-bootstrap/objects/sunrun2_bom_lines__dll/fields/unit_cost_affiliate_rate__c.field-meta.xml
<CustomField>
    <fullName>unit_cost_affiliate_rate__c</fullName>
    <label>unit_cost_affiliate_rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>unit_cost_affiliate_rate</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Number</type>
</CustomField>