recycling-bin/2026-04-21-repo-cleanup/tmp/stream-bootstrap/objects/sunrun2_bom_lines__dll/fields/wattage_w__c.field-meta.xml
<CustomField>
    <fullName>wattage_w__c</fullName>
    <label>wattage_w</label>
    <precision>18</precision>
    <scale>6</scale>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>wattage_w</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Number</type>
</CustomField>